@@ -14,7 +14,7 @@ $LANGUAGES->{'fr'} = {
                        'April' => 'Avril',
                        'August' => 'Ao@^ut',
                        'Button' => 'Bouton',
-                       'Contents' => 'Table mati@`eres',
+                       'Contents' => 'Table des mati@`eres',
                        'Current Position' => 'Position',
                        'December' => 'D@\'ecembre',
                        'February' => 'F@\'evrier',
